# Jode

./: .clang-format  .eslintrc.json  .gitignore  CMakeLists.txt  build.sh  package.json  preprocess.json  source_in_bash_profile.sh  tsconfig.json  webpack.config.js
lib/: addon.d.ts  addon.test.js  addon.test.ts  bootstrap.js  test.js  test_addon.js  test_binding.js
lib/config/: tsconfig.json  webpack.config.js
src/: bootstrap.js  context.cpp  context.h  jode.cpp  jode.rc  mojo.cpp  node_internal.cpp  platform.cpp  resource.h  resource.rc  utils.cpp  utils.h
src/addon/: binding.cpp  delay_load_hook.cpp  shell.cpp  shell.h
src/res/: bootstrap.js  jode.rc  node-debugger.ts  repl.js  test.ts
